tests/baselines/reference/duplicateIdentifierRelatedSpans6.errors.txt
[96mtests/cases/compiler/file1.ts[0m:[93m3[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate1'.

[7m3[0m         duplicate1: () => string;
[7m [0m [91m        ~~~~~~~~~~[0m

  [96mtests/cases/compiler/file2.ts[0m:[93m5[0m:[93m9[0m
    [7m5[0m         duplicate1(): number;
    [7m [0m [96m        ~~~~~~~~~~[0m
    'duplicate1' was also declared here.
[96mtests/cases/compiler/file1.ts[0m:[93m4[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate2'.

[7m4[0m         duplicate2: () => string;
[7m [0m [91m        ~~~~~~~~~~[0m

  [96mtests/cases/compiler/file2.ts[0m:[93m6[0m:[93m9[0m
    [7m6[0m         duplicate2(): number;
    [7m [0m [96m        ~~~~~~~~~~[0m
    'duplicate2' was also declared here.
[96mtests/cases/compiler/file1.ts[0m:[93m5[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate3'.

[7m5[0m         duplicate3: () => string;
[7m [0m [91m        ~~~~~~~~~~[0m

  [96mtests/cases/compiler/file2.ts[0m:[93m7[0m:[93m9[0m
    [7m7[0m         duplicate3(): number;
    [7m [0m [96m        ~~~~~~~~~~[0m
    'duplicate3' was also declared here.
[96mtests/cases/compiler/file2.ts[0m:[93m5[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate1'.

[7m5[0m         duplicate1(): number;
[7m [0m [91m        ~~~~~~~~~~[0m

  [96mtests/cases/compiler/file1.ts[0m:[93m3[0m:[93m9[0m
    [7m3[0m         duplicate1: () => string;
    [7m [0m [96m        ~~~~~~~~~~[0m
    'duplicate1' was also declared here.
[96mtests/cases/compiler/file2.ts[0m:[93m6[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate2'.

[7m6[0m         duplicate2(): number;
[7m [0m [91m        ~~~~~~~~~~[0m

  [96mtests/cases/compiler/file1.ts[0m:[93m4[0m:[93m9[0m
    [7m4[0m         duplicate2: () => string;
    [7m [0m [96m        ~~~~~~~~~~[0m
    'duplicate2' was also declared here.
[96mtests/cases/compiler/file2.ts[0m:[93m7[0m:[93m9[0m - [91merror[0m[90m TS2300: [0mDuplicate identifier 'duplicate3'.

[7m7[0m         duplicate3(): number;
[7m [0m [91m        ~~~~~~~~~~[0m

  [96mtests/cases/compiler/file1.ts[0m:[93m5[0m:[93m9[0m
    [7m5[0m         duplicate3: () => string;
    [7m [0m [96m        ~~~~~~~~~~[0m
    'duplicate3' was also declared here.


==== tests/cases/compiler/file2.ts (3 errors) ====
    /// <reference path="./file1" />
    
    declare module "someMod" {
        export interface TopLevel {
            duplicate1(): number;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate1'.
!!! related TS6203 tests/cases/compiler/file1.ts:3:9: 'duplicate1' was also declared here.
            duplicate2(): number;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate2'.
!!! related TS6203 tests/cases/compiler/file1.ts:4:9: 'duplicate2' was also declared here.
            duplicate3(): number;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate3'.
!!! related TS6203 tests/cases/compiler/file1.ts:5:9: 'duplicate3' was also declared here.
        }
    }
    export {};
    
==== tests/cases/compiler/file1.ts (3 errors) ====
    declare module "someMod" {
        export interface TopLevel {
            duplicate1: () => string;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate1'.
!!! related TS6203 tests/cases/compiler/file2.ts:5:9: 'duplicate1' was also declared here.
            duplicate2: () => string;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate2'.
!!! related TS6203 tests/cases/compiler/file2.ts:6:9: 'duplicate2' was also declared here.
            duplicate3: () => string;
            ~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'duplicate3'.
!!! related TS6203 tests/cases/compiler/file2.ts:7:9: 'duplicate3' was also declared here.
        }
    }
Found 6 errors.

